--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tmdb-ts": "^2.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
